# playsound

./: .gitignore  .replit  .travis.yml  CHANGES  LICENSE  README.rst  _convenience.py  demo.py  playsound.py  pyproject.toml  references.txt  setup.py  soundplay.py  test.py
