[project]
name = "playsound"
version = "1.3.0"
requires-python = ">=3.7"
description = "Pure Python, cross platform, single function module with no dependencies for playing sounds."
readme = "README.rst"
license = { text = "MIT" }
authors = [{ name = "Taylor Marks", email = "taylor@marksfam.com" }]
keywords = [
  "sound",
  "playsound",
  "music",
  "wave",
  "wav",
  "mp3",
  "media",
  "song",
  "play",
  "audio",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.3",
  "Programming Language :: Python :: 2.4",
  "Programming Language :: Python :: 2.5",
  "Programming Language :: Python :: 2.6",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.1",
  "Programming Language :: Python :: 3.2",
  "Programming Language :: Python :: 3.3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Multimedia :: Sound/Audio :: MIDI",
  "Topic :: Multimedia :: Sound/Audio :: Players",
  "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
]

[project.urls]
Homepage = "https://github.com/TaylorSMarks/playsound"
Documentation = "https://github.com/TaylorSMarks/playsound/blob/master/README.rst"
Repository = "https://github.com/TaylorSMarks/playsound"
"Issue tracker" = "https://github.com/TaylorSMarks/playsound/issues"

[tool.setuptools]
py-modules = ["playsound"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
